# remote-CHAT

./: .gitignore  config.yaml  main.py  main_old.py  pyproject.toml  requirements.txt  test.py  util.py
audio_processing/: noise.py  util.py
get_response/: asr.py  cli.py  recorder.py
hearing_test/: test_logic.py  test_manager.py  test_types.py  util.py
media/ASL/: sentences.json
media/CHAT/text/: 1-animals.json  10-shopping.json  11-finance.json  11-technology.json  12-history.json  13-travel.json  14-weather.json  15-work_study.json  2-daily_activiy.json  3-Education.json  4-food.json  5-health.json  6-hobby.json  7-holiday.json  8-nature.json  9-relationships.json  Transportation.json  animals.json  food.json  health.json  hobby.json  relationships.json  shopping.json  weather.json
media/FAAF/: stimuli.json
static/: main.js
static/js/: main.js
stimuli_generator/: questions.py
templates/: base.html  calibration.html  home.html  index.html  microphone.html  practice.html  test.html
tests/: test_HearingTest.py
vocalizer/: vocalizer.py
