[tool.poetry]
name = "wordnet-hearing-test"
version = "0.1.0"
description = "Hearing test using Wordnet,ASR and TTS"
authors = ["Mohsen Fatehifar <mohsen.fatehifar@gmail.com>"]
readme = "README.md"
packages = [{include = "wordnet_hearing_test"}]

[tool.poetry.dependencies]
python = "3.10.15"
torch = "^2.5"
torchvision = "^0.20"
torchaudio = "^2.5"
speechbrain = "^0.5.13"
sounddevice = "^0.4.6"
pyaudio = "^0.2.13"
loguru = "^0.6.0"
nltk = "^3.8.1"
spacy = "^3.5.0"
pydub = "^0.25.1"
tensorflow-io = "0.34.0"
tensorflow = "2.15"
transformers = "^4.36.2"
colorama = "^0.4.6"
librosa = "^0.10.2.post1"
openai = "^1.54.5"
accelerate = "^1.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
pep8-naming = "^0.13.3"
darglint = "^1.8.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"
